--- a/adrin/public/assets/style.css
+++ b/adrin/public/assets/style.css
@@ -20,7 +20,7 @@ h4 i{margin-right: 0.5em;}
 
 p{font-size:1em;line-height: 1.7em; margin-bottom: 1.7em;}
 
-.spacer{padding: 6em 0;}
+.spacer{padding: 6.82em 0;}
 
 .btn{border:none;border-radius: 0;padding: 1em 4em;background: rgba(0,0,0,0.5);text-transform: uppercase;}
 .btn:hover,.btn:active{color: #fff;}
@@ -155,5 +155,5 @@ p{font-size:1em;line-height: 1.7em; margin-bottom: 1.7em;}
 
 	.grid.team div{margin: 0;padding: 0;}
 	figure.effect-chico figcaption {padding: 1.5em;}
-	.footer{margin-top: 2em;padding-bottom: 2em;}
+	.footer{  position: absolute; right: 0; bottom: 0; left: 0; padding: 1rem;}
 }
