Client parser news from API and show to client

--- a/adrin/views/news.html
+++ b/adrin/views/news.html
@@ -79,17 +79,20 @@
 <div id="about"  class="container spacer about">
 <h2 class="text-center wowload fadeInUp">News from <a href="http://codeguida.com">codeguida</a> </h2>  
   <div class="row">
-  <div class="col-sm-6 wowload fadeInLeft">
+  <div class="col-sm-11 wowload fadeInLeft" style="margin-right: 40px">
     <h4><i class="fa fa-paint-brush"></i> Design</h4>
-    <p class="news-info"> 
-    </p>
+    <div class="news-info">
+
+    </div>
     
 
   </div>
+<!--
   <div class="col-sm-6 wowload fadeInRight">
   <h4><i class="fa fa-code"></i> Frontend & Backend Development</h4>
   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>    
   </div>
+-->
   </div>
 </div>
 <!-- #Cirlce Ends -->
