Create client parser news Create web page and client logic to parse data from REST API

--- a/adrin/views/news.html
+++ b/adrin/views/news.html
@@ -77,7 +77,7 @@
 
 <!-- Cirlce Starts -->
 <div id="about"  class="container spacer about">
-<h2 class="text-center wowload fadeInUp">News from <a href="http://codeguida.com">codeguida</a> </h2>  
+<h2 class="text-center wowload fadeInUp" id='news-header'></h2>  
   <div class="row">
   <div class="col-sm-11 wowload fadeInLeft" style="margin-right: 40px">
     <h4><i class="fa fa-paint-brush"></i> Design</h4>
@@ -122,7 +122,7 @@ Copyright 2016. It news parser + Adrin server. All rights reserved.
 
 <!-- custom script -->
 <script src="assets/script.js"></script>
-<script src="assets/clientRoute.js"></script>
+<script src="assets/clientNewsParser.js"></script>
 
 </body>
 </html>
